@@ -2,7 +2,7 @@
 \alias{personfit}
 \title{Person fit statistics}
 \usage{
-  personfit(x, method = "EAP")
+  personfit(x, method = "EAP", ...)
 }
 \arguments{
   \item{x}{a computed model object of class
@@ -13,6 +13,9 @@
   be expected a-posteriori (\code{"EAP"}), Bayes modal
   (\code{"MAP"}), weighted likelihood estimation
   (\code{"WLE"}), or maximum likelihood (\code{"ML"})}
+
+  \item{...}{additional arguments to be passed to
+  \code{fscores()}}
 }
 \description{
   \code{personfit} calculates the Zh values from Drasgow,
